cmake_minimum_required(VERSION 3.13)
project(advent-of-code-2018)

set(CMAKE_CXX_STANDARD 17)

add_executable(day-1 src/day1.cpp)
add_executable(day-2 src/day2.cpp)
add_executable(day-3 src/day3.cpp)
add_executable(day-4 src/day4.cpp)
add_executable(day-5 src/day5.cpp)

include_directories(advent-of-code-2018)